src/objects/Purchase_Order_Detail__c.object
<CustomObject>
    <description>Line items of the purchase order</description>
    <fields>
        <fullName>Cancel_Flag__c</fullName>
        <label>Cancel Flag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_From__c</fullName>
        <label>Converted From</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Number__c</fullName>
        <label>Distribution Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expenditure_Type__c</fullName>
        <label>Expenditure Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Details</relationshipLabel>
        <relationshipName>Purchase_Order_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Purchase Order Detail</label>
    <nameField>
        <label>Purchase Order Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Order Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>